# pdfpropreader

./: .gitignore  LICENSE  README.md  setup.cfg
pdfpropreader/: combine_pdf_files.py  extract_pdf_property.py
