[metadata]
name = pdfpropreader
version = attr: pdfpropreader.__version__
url = https://github.com/yamasampo/pdfpropreader
author = Division of Evolutionary Genetics in NIG
author_email = hyamashita@nig.ac.jp
license_file = LICENSE
description = pdfpropreader: Extract properties of a PDF file content.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = PyPDF2
